--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body class="bg-gray-100 flex justify-center items-center h-screen">
   <div class="w-full max-w-md p-6 bg-white rounded-lg shadow-lg">
@@ -35,7 +37,13 @@
              class="absolute inset-0 w-full h-full object-cover rounded-lg">
         <div id="invitationText" 
              class="absolute text-white text-xl"
-             style="top: 45%; left: 50%; transform: translate(-50%, -50%); color:rgb(53, 0, 0);">
+             style="
+             top: 44%;
+             left: 50%;
+             transform: translate(-50%, -50%);
+             color:rgb(53, 0, 0);
+             font-family: 'Playfair Display', serif;
+             font-size: 18px;">
           <!-- Tên sẽ được chèn vào đây -->
         </div>
       </div>
