--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- Tailwind CSS CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600;700&display=swap" rel="stylesheet">
 
 </head>
 <body class="bg-gray-100 flex justify-center items-center h-screen">
@@ -42,7 +42,7 @@
              left: 50%;
              transform: translate(-50%, -50%);
              color:rgb(53, 0, 0);
-             font-family: 'Playfair Display', serif;
+             font-family: 'Crimson Pro', serif;
              font-size: 18px;">
           <!-- Tên sẽ được chèn vào đây -->
         </div>
