--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-gray-100 flex justify-center items-center h-screen">
   <div class="w-full max-w-md p-6 bg-white rounded-lg shadow-lg">
-    <h1 class="text-2xl font-bold text-center mb-4">Buổi Chụp Ảnh Kỷ Yếu</h1>
+    <h1 class="text-2xl font-bold text-center mb-4">Điền đi không bị hack đâu</h1>
     <form id="nameForm" class="space-y-4">
       <div>
         <label for="name" class="block text-sm font-medium text-gray-700">Nhập tên của bạn:</label>
@@ -21,7 +21,7 @@
       </div>
       <button type="submit" 
               class="w-full bg-blue-500 text-white py-2 rounded-lg hover:bg-blue-600 transition">
-        Xem thiệp mời
+        Còn phơm
       </button>
     </form>
   </div>
